# TrinityCore

./: .cursorignore  .gitignore  AGENTS.md  CMakeLists.txt  README.md
modules/: CMakeLists.txt  ModulesLoader.cpp.in.cmake  ModulesScriptLoader.h  README.md
modules/mod-example/: mod-example.cmake
modules/mod-example/conf/: mod-example.conf.dist
modules/mod-example/data/sql/world/: mod_example_2026_07_12_00_world.sql
modules/mod-example/src/Script/: mod_example_loader.cpp
modules/mod-playerbots/: README.md  mod-playerbots.cmake
modules/mod-playerbots/conf/: mod-playerbots.conf.dist
modules/mod-playerbots/data/sql/playerbots/base/: playerbots_gate9_base.sql
modules/mod-playerbots/src/: Playerbots.h  PlayerbotsConfig.h
modules/mod-playerbots/src/Bot/: BotPlayerbotAI.cpp  BotPlayerbotAI.h
modules/mod-playerbots/src/Bot/Action/: AttackAction.cpp  AttackAction.h  AttackAnythingAction.cpp  AttackAnythingAction.h  AttackValidity.cpp  AttackValidity.h  BgStatusActions.cpp  BgStatusActions.h  BotMapResidency.h  CastSpellAction.cpp  CastSpellAction.h  CombatPositioning.cpp  CombatPositioning.h  CombatTargetSelect.cpp  CombatTargetSelect.h  DeathActions.cpp  DeathActions.h  DuelActions.cpp  DuelActions.h  FleeAction.cpp  FleeAction.h  FollowAction.cpp  FollowAction.h  GrindAction.cpp  GrindAction.h  GroupActions.cpp  GroupActions.h  GuildActions.cpp  GuildActions.h  ItemPushResultAction.cpp  ItemPushResultAction.h  LevelUpAction.cpp  LevelUpAction.h  LfgActions.cpp  LfgActions.h  LootAction.cpp  LootAction.h  LootQuestFilter.cpp  LootQuestFilter.h  LootRollWonAction.cpp  (+37 more)
modules/mod-playerbots/src/Bot/Engine/: Action.cpp  Action.h  AiFactory.cpp  AiFactory.h  AiObjectContext.cpp  AiObjectContext.h  Engine.cpp  Engine.h  Event.h  PlayerbotAIAware.h  PlayerbotAIBase.cpp  PlayerbotAIBase.h  Strategy.h  Trigger.h  Value.cpp  Value.h
modules/mod-playerbots/src/Bot/Factory/: RandomPlayerbotFactory.cpp  RandomPlayerbotFactory.h
modules/mod-playerbots/src/Bot/Packet/: BotBattlefieldStatusPackets.cpp  BotBattlefieldStatusPackets.h  BotBuyFailedPacket.cpp  BotBuyFailedPacket.h  BotCastFailedPacket.cpp  BotCastFailedPacket.h  BotDuelRequestedPacket.cpp  BotDuelRequestedPacket.h  BotEmotePacket.cpp  BotEmotePacket.h  BotGroupDestroyedPacket.cpp  BotGroupDestroyedPacket.h  BotGroupNewLeaderPacket.cpp  BotGroupNewLeaderPacket.h  BotGuildInvitePacket.cpp  BotGuildInvitePacket.h  BotInventoryChangeFailurePacket.cpp  BotInventoryChangeFailurePacket.h  BotItemPushResultPacket.cpp  BotItemPushResultPacket.h  BotLFGProposalUpdatePacket.cpp  BotLFGProposalUpdatePacket.h  BotLFGRoleCheckUpdatePacket.cpp  BotLFGRoleCheckUpdatePacket.h  BotLevelUpInfoPacket.cpp  BotLevelUpInfoPacket.h  BotLogXPGainPacket.cpp  BotLogXPGainPacket.h  BotLootItemData.cpp  BotLootItemData.h  BotLootResponsePacket.cpp  BotLootResponsePacket.h  BotLootRollWonPacket.cpp  BotLootRollWonPacket.h  BotMoveSetRunSpeedPacket.cpp  BotMoveSetRunSpeedPacket.h  BotPacketParse.h  BotPartyCommandResultPacket.cpp  BotPartyCommandResultPacket.h  BotPartyInvitePacket.cpp  (+21 more)
modules/mod-playerbots/src/Bot/PacketHandler/: BotPacketHandlerBattleground.cpp  BotPacketHandlerEconomy.cpp  BotPacketHandlerEmote.cpp  BotPacketHandlerGroup.cpp  BotPacketHandlerInvite.cpp  BotPacketHandlerLfg.cpp  BotPacketHandlerLoot.cpp  BotPacketHandlerProgress.cpp  BotPacketHandlerQuest.cpp  BotPacketSignal.h  BotPacketSignalRegistry.cpp
modules/mod-playerbots/src/Bot/Rpg/: GrindLocationCache.cpp  GrindLocationCache.h  HubLocationCache.cpp  HubLocationCache.h  NewRpgInfo.cpp  NewRpgInfo.h  QuestItemDropCache.cpp  QuestItemDropCache.h
modules/mod-playerbots/src/Bot/Strategy/: CombatStrategy.cpp  CombatStrategy.h  FleeStrategy.cpp  FleeStrategy.h  FollowMasterStrategy.cpp  FollowMasterStrategy.h  NewRpgStrategy.cpp  NewRpgStrategy.h  PassiveStrategy.cpp  PassiveStrategy.h
modules/mod-playerbots/src/Bot/Trigger/: CombatTriggers.cpp  CombatTriggers.h  DuelTriggers.cpp  DuelTriggers.h  GroupTriggers.cpp  GroupTriggers.h  GuildTriggers.cpp  GuildTriggers.h  LfgTriggers.cpp  LfgTriggers.h  NewRpgTriggers.cpp  NewRpgTriggers.h  PetitionTriggers.cpp  PetitionTriggers.h  QuestTriggers.cpp  QuestTriggers.h  ResurrectTriggers.cpp  ResurrectTriggers.h  SignalTrigger.cpp  SignalTrigger.h
modules/mod-playerbots/src/Db/: PlayerbotsDatabaseMgr.cpp  PlayerbotsDatabaseMgr.h
modules/mod-playerbots/src/Mgr/: BotSessionMgr.cpp  BotSessionMgr.h  PlayerbotMgr.cpp  PlayerbotMgr.h  PlayerbotsMgr.cpp  PlayerbotsMgr.h  RandomPlayerbotMgr.cpp  RandomPlayerbotMgr.h
modules/mod-playerbots/src/Mgr/Move/: FleeManager.cpp  FleeManager.h
modules/mod-playerbots/src/Mgr/Talent/: BotTalentMgr.cpp  BotTalentMgr.h
modules/mod-playerbots/src/Script/: PlayerbotCommandScript.cpp  cs_playerbots.cpp  mod_playerbots_loader.cpp  mod_playerbots_player_script.cpp  mod_playerbots_server_script.cpp  mod_playerbots_world_script.cpp
tests/: CMakeLists.txt
tests/common/: Config.cpp
tests/database/: UpdateFetcher.cpp
tests/game/: Achievement.cpp  Archaeology.cpp  PlayerbotsBattlefieldStatusParse.cpp  PlayerbotsBuyFailedParse.cpp  PlayerbotsCastFailedParse.cpp  PlayerbotsDuelRequestedParse.cpp  PlayerbotsEmoteParse.cpp  PlayerbotsGroupDestroyedParse.cpp  PlayerbotsGroupNewLeaderParse.cpp  PlayerbotsGuildInviteParse.cpp  PlayerbotsInventoryChangeFailureParse.cpp  PlayerbotsItemPushResultParse.cpp  PlayerbotsLFGProposalUpdateParse.cpp  PlayerbotsLFGRoleCheckUpdateParse.cpp  PlayerbotsLevelUpInfoParse.cpp  PlayerbotsLogXPGainParse.cpp  PlayerbotsLootResponseParse.cpp  PlayerbotsLootRollWonParse.cpp  PlayerbotsMoveSetRunSpeedParse.cpp  PlayerbotsPartyCommandResultParse.cpp  PlayerbotsPartyInviteParse.cpp  PlayerbotsPartyUpdateParse.cpp  PlayerbotsPetitionShowSignaturesParse.cpp  PlayerbotsQuestConfirmAcceptParse.cpp  PlayerbotsQuestUpdateAddCreditParse.cpp  PlayerbotsQuestUpdateCompleteParse.cpp  PlayerbotsResurrectRequestParse.cpp  PlayerbotsSTextEmoteParse.cpp  PlayerbotsStartLootRollParse.cpp  PlayerbotsTradeStatusParse.cpp  PlayerbotsTradeUpdatedParse.cpp  PlayerbotsValueLayer.cpp
(+272 files in other folders)
